TreeMap: Fixed Overlap title

--- a/app/javascript/components/treemaps/tree_map.scss
+++ b/app/javascript/components/treemaps/tree_map.scss
@@ -11,7 +11,7 @@
   margin-left: 5px !important;
 }
 .jqx-treemap-label, .jqx-treemap-rectangle span {
-  margin-top: 14px;
+  margin-top: 16px;
   min-width: 5%;
   word-wrap: break-word;
   text-align: center;
